--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.3",
     "mysql": "^2.15.0",
+    "nodemailer": "^4.6.0",
     "nodemon": "^1.14.11",
     "random-key": "^0.3.2"
   },
